<resources>

    <string name="gcmSenderId">398373931836</string>

    <string name="app_name">Red Life</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="action_search">Search</string>
    <string name="action_logout">Logout</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="nav_item_dashboard">Dashboard</string>
    <string name="nav_item_profile">Profile</string>
    <string name="nav_item_history">History</string>
    <string name="nav_item_share">Spread the word</string>
    <!-- navigation drawer item labels  -->
    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_dashboard</item>
        <item>@string/nav_item_profile</item>
        <item>@string/nav_item_history</item>
        <item>@string/nav_item_share</item>
    </string-array>

    <string name="title_profile">Profile</string>
    <string name="title_medical_record">History</string>
    <string name="title_dashboard">Red Life</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_splash">Splash</string>
    <string name="title_activity_signup">SignupActivity</string>


    <string name="hint_name">Full Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_phone">Mobile No</string>
    <string name="hint_dob">DOB</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="btn_update">Update</string>
    <string name="err_msg_name">Enter your full name</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="err_msg_password">Enter the password</string>

    <string-array name="bloodgroup">
        <item>A+ve</item>
        <item>A-ve</item>
        <item>B+ve</item>
        <item>B-ve</item>
        <item>AB+</item>
        <item>AB-ve</item>
        <item>0+ve</item>
        <item>o-ve</item>
    </string-array>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_list_donors">ListDonors</string>
    <string name="title_activity_donate">Donate</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="enterMessage">Enter Message</string>
    <string name="title_activity_response">ResponseActivity</string>
    <string name="title_activity_response_details">ResponseDetails</string>
    <string name="title_activity_donor_greetings_activty">DonorGreetingsActivty</string>
    <string name="title_activity_map">Set Location</string>

    <string name="place_details">&lt;b&gt;%1$s&lt;/b&gt;&lt;br/&gt;&lt;i&gt;Place Id: %2$s&lt;/i&gt;&lt;br/&gt;Address: %3$s&lt;br/&gt;Phone: %4$s&lt;br/&gt;Website: %5$s</string>

    <string name="autocomplete_hint">Enter place name or address</string>
    <string name="selected_place">Last Selected Place:</string>
    <string name="clear_text">Clear Text</string>

    <string name="msg_sit_back">Sit back &amp; Relax! while we verify your mobile number</string>
    <string name="msg_manual_otp">(Enter the OTP below in case if we fail to detect the SMS automatically)</string>
    <string name="lbl_enter_otp">Enter OTP</string>
    <string name="title_activity_on_boarding">OnBoarding</string>
    <string name="section_format">Hello World from section: %1$d</string>
</resources>
