<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RelativeLayout
                android:id="@+id/nav_header_container_signup"
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:layout_alignParentTop="true"
                android:background="@color/colorPrimary">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/ic_profile"
                    android:scaleType="fitCenter"
                    android:layout_centerInParent="true" />

            </RelativeLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="20dp">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/input_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:hint="@string/hint_name" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp">

                    <EditText
                        android:id="@+id/input_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:hint="@string/hint_email" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp">

                    <EditText
                        android:id="@+id/input_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="phone"
                        android:hint="@string/hint_phone" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_dob"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp">

                    <EditText
                        android:id="@+id/input_dob"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="date"
                        android:hint="@string/hint_dob" />
                </android.support.design.widget.TextInputLayout>

                <!--<android.support.design.widget.TextInputLayout-->
                    <!--android:id="@+id/input_layout_bg"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_marginTop="15dp">-->

                    <!--<DropDownListView-->
                        <!--android:id="@+id/input_bg"-->
                        <!--android:layout_width="match_parent"-->
                        <!--android:layout_height="wrap_content"-->


                        <!--android:entries="@array/bloodgroup"/>-->
                <!--</android.support.design.widget.TextInputLayout>-->

                <Button android:id="@+id/btn_update"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_update"
                    android:background="@color/colorPrimary"
                    android:layout_marginTop="40dp"
                    android:layout_marginBottom="40dp"
                    android:textColor="@android:color/white"/>
                android:textColor="@android:color/white"/>

            </LinearLayout>
        </LinearLayout>
</ScrollView>




<!--<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--xmlns:tools="http://schemas.android.com/tools"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--android:orientation="vertical"-->
    <!--tools:context="com.rujara.health.redlife.activity.ProfileFragment">-->


    <!--<TextView-->
        <!--android:id="@+id/label"-->
        <!--android:layout_alignParentTop="true"-->
        <!--android:layout_marginTop="100dp"-->
        <!--android:layout_width="fill_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:gravity="center_horizontal"-->
        <!--android:textSize="45dp"-->
        <!--android:text="Profile"-->
        <!--android:textStyle="bold"/>-->

    <!--<TextView-->
        <!--android:layout_below="@id/label"-->
        <!--android:layout_centerInParent="true"-->
        <!--android:layout_width="fill_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:textSize="12dp"-->
        <!--android:layout_marginTop="10dp"-->
        <!--android:gravity="center_horizontal"-->
        <!--android:text="Edit fragment_profile.xml to change the appearance" />-->

<!--</RelativeLayout>-->